Allow collapsing sidebar (fix #482)

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -126,6 +126,19 @@ input::-webkit-calendar-picker-indicator {
   }
 }
 
+/* When the desktop sidebar is hidden: cancel the left-pad offset */
+@media (min-width: 1280px) {
+  /* Higher specificity (two classes) overrides the single-class desktop-content-left-pad rule */
+  .desktop-sidebar-hidden.desktop-content-left-pad {
+    padding-left: 0;
+  }
+
+  /* Override the margin-left: 17rem applied on no-right-toc pages at 1600px+ */
+  body .desktop-sidebar-hidden.desktop-content-max {
+    margin-left: 0;
+  }
+}
+
 /* Layout wrappers */
 .app-wrapper {
   @apply dark:bg-background-dark flex min-h-dvh overflow-hidden bg-white;
